<resources>
    <string name="app_name">MinhaProva2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome:</string>
    <string name="imagem">imagem</string>
    <string name="interprete">Interprete:</string>
    <string name="descri_o">Descrição:</string>
    <string name="filme">Filme:</string>
    <string name="click_para_inserir_uma_nova_imagem">Click para inserir uma nova imagem:</string>
    <string name="alterar">alterar</string>
    <string name="poder">Poder:</string>
    <string name="ataque">Ataque:</string>
    <string name="heroi">Heroi:</string>
    <string name="defesa">Defesa:</string>
</resources>